--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.mlk</groupId>
     <artifactId>miniature-queue-core</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>Miniature Queue: Core</name>
 
     <description>TBA.</description>
