--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -42,16 +42,18 @@
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
 		<version>4.12</version>
+        <scope>test</scope>
 	</dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.mlk</groupId>
             <artifactId>miniature-queue-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
