--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.mlk</groupId>
     <artifactId>miniature-queue-core</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.1-java7</version>
     <name>Miniature Queue: Core</name>
 
     <description>TBA.</description>
@@ -50,6 +50,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
@@ -75,8 +80,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
                 <executions>
                     <execution>
