--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.mlk</groupId>
     <artifactId>miniature-queue-gson</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.1-java7</version>
     <name>Miniature Queue: GSON</name>
 
     <description>TBA.</description>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.github.mlk</groupId>
             <artifactId>miniature-queue-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.1-java7</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -79,8 +79,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
                 <executions>
                     <execution>
