--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.github.mlk</groupId>
             <artifactId>miniature-queue-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.1-java7</version>
         </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
@@ -85,8 +85,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
                 <executions>
                     <execution>
