Support for modules allowing for simplified setup

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.github.mlk</groupId>
             <artifactId>miniature-queue-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
