--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.github.mlk</groupId>
             <artifactId>miniature-queue-core</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
