one pom to rule them all

--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -2,9 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.mlk</groupId>
+    <parent>
+        <groupId>com.github.mlk</groupId>
+        <artifactId>miniature-queue</artifactId>
+        <version>0.0.2-SNAPSHOT</version>
+    </parent>
+
     <artifactId>miniature-queue-jackson</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
     <name>Miniature Queue: Jackson</name>
 
     <description>TBA.</description>
