--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
         <module>gson</module>
 	<module>jackson</module>
 	<module>rabbitmq</module>
+	<module>jedis</module>
     </modules>
 </project>
