--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -18,7 +18,7 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>https://raw.github.com/mlk/miniature-queue/master/license.txt</url>
+            <url>https://raw.githubusercontent.com/mlk/miniature-queue/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
