--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,28 @@
     <version>0.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <distributionManagement>
+    <site>
+      <id>website</id>
+      <url>file:/var/www/html/miniature-queue</url>
+    </site>
+  </distributionManagement>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.3</version>
+      </plugin>
+    </plugins>
+  
+  </reporting>
+
     <modules>
         <module>core</module>
         <module>gson</module>
