--- a/jedis/pom.xml
+++ b/jedis/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>jedis</artifactId>
             <version>2.8.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.geowarin</groupId>
+            <artifactId>docker-junit-rule</artifactId>
+            <version>1.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
