--- a/rabbitmq/pom.xml
+++ b/rabbitmq/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>amqp-client</artifactId>
             <version>3.6.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.geowarin</groupId>
+            <artifactId>docker-junit-rule</artifactId>
+            <version>1.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
