--- a/jedis/pom.xml
+++ b/jedis/pom.xml
@@ -9,17 +9,6 @@
         <version>0.0.2-SNAPSHOT</version>
     </parent>
 
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>bintray</name>
-            <url>http://jcenter.bintray.com</url>
-        </repository>
-    </repositories>
-
     <artifactId>miniature-queue-jedis</artifactId>
     <name>Miniature Queue: REDIS using Jedis</name>
 
@@ -78,9 +67,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.geowarin</groupId>
-            <artifactId>docker-junit-rule</artifactId>
-            <version>1.1.0</version>
+            <groupId>com.github.tdomzal</groupId>
+            <artifactId>junit-docker-rule</artifactId>
+            <version>0.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
